--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
         networks:
             - sail
             - back-tier
+            - elastic
         depends_on:
             - mysql
             - redis
+            - elasticsearch
     mysql:
         image: 'mysql:8.0'
         expose:
@@ -82,8 +84,33 @@ services:
             - front-tier
         restart: always
 
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+        container_name: elasticsearch
+        environment:
+            - xpack.security.enabled=false
+            - discovery.type=single-node
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+            nofile:
+                soft: 65536
+                hard: 65536
+        cap_add:
+            - IPC_LOCK
+        volumes:
+            - elasticsearch-data:/usr/share/elasticsearch/data
+        networks:
+            - elastic
+        ports:
+            - 9200:9200
+            - 9300:9300
+
 networks:
     sail:
+        driver: bridge
+    elastic:
         driver: bridge
     front-tier:
     back-tier:
@@ -95,3 +122,5 @@ volumes:
         driver: local
     prometheus_data: {}
     grafana_data: {}
+    elasticsearch-data:
+        driver: local
